--- a/.github/workflows/api-staging-pull-request.yml
+++ b/.github/workflows/api-staging-pull-request.yml
@@ -70,6 +70,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'tumai-space-api'
+          app-name: 'tumai-space-staging-api'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F292746127E04206BF3B55C55532B963 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C4B4CB5E5E3B454D88E1F49A2612A5A5 }}
