--- a/.github/workflows/app-main-merge.yml
+++ b/.github/workflows/app-main-merge.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup environment type
+        working-directory: ./app
+        run: echo "REACT_APP_ENVIRONMENT=production" > .env
       - name: CI & Build
         working-directory: ./app
         run: npm ci && npm run build
