--- a/app/firebase.json
+++ b/app/firebase.json
@@ -12,18 +12,23 @@
   },
   "emulators": {
     "auth": {
+      "host": "0.0.0.0",
       "port": 9099
     },
     "hosting": {
+      "host": "0.0.0.0",
       "port": 5000
     },
     "pubsub": {
+      "host": "0.0.0.0",
       "port": 8085
     },
     "storage": {
+      "host": "0.0.0.0",
       "port": 9199
     },
     "ui": {
+      "host": "0.0.0.0",
       "enabled": true,
       "port": 1111
     },
