--- a/app/package.json
+++ b/app/package.json
@@ -19,10 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env react-scripts build",
+    "test": "env-cmd -f .env react-scripts test",
+    "eject": "env-cmd -f .env react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +47,7 @@
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
+    "env-cmd": "^10.1.0",
     "jest": "^27.5.1",
     "react-test-renderer": "^18.2.0"
   }
