--- a/.github/workflows/api-all-push-commit.yml
+++ b/.github/workflows/api-all-push-commit.yml
@@ -30,5 +30,14 @@ jobs:
         # TODO: integrate mypy
         # && PYTHONPATH=/home/runner/work/space/space/api mypy api
 
+      - name: write secret file
+        run: |
+          mkdir -p /home/runner/work/space/space/api/.secrets          
+          touch /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json 
+          printf "$FIREBASE_ADMINSDK_CERTIFICATE_STAGING" >> /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json
+
+      - run: printf "$FIREBASE_ADMINSDK_CERTIFICATE_STAGING"
+      - run: cat /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json
+
       - name: Run pytest
         run: PYTHONPATH=/home/runner/work/space/space/api pytest ./api
