--- a/.github/workflows/api-main-merge.yml
+++ b/.github/workflows/api-main-merge.yml
@@ -32,16 +32,15 @@ jobs:
         # TODO: integrate mypy
         # && PYTHONPATH=/home/runner/work/space/space/api mypy api
 
-      - name: Run pytest
-        run: PYTHONPATH=/home/runner/work/space/space/api pytest ./api
-      
       - name: write secret file
         run: |
           mkdir -p /home/runner/work/space/space/api/.secrets          
           touch /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json 
-          printf "$FIREBASE_ADMINSDK_CERTIFICATE" >> /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json
+          echo "${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE }}" > /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json
 
-
+      - name: Run pytest
+        run: PYTHONPATH=/home/runner/work/space/space/api pytest ./api
+      
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
