add authentication test/ping feature to app and api, refactor db setup (#63)

--- a/.github/workflows/api-all-push-commit.yml
+++ b/.github/workflows/api-all-push-commit.yml
@@ -30,5 +30,11 @@ jobs:
         # TODO: integrate mypy
         # && PYTHONPATH=/home/runner/work/space/space/api mypy api
 
+      - name: write secret file
+        run: |
+          mkdir -p /home/runner/work/space/space/api/.secrets          
+          touch /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json 
+          echo "${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}" > /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json
+
       - name: Run pytest
         run: PYTHONPATH=/home/runner/work/space/space/api pytest ./api
