--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,14 +12,13 @@
 		"axios": "^1.3.4",
 		"eslint": "^8.29.0",
 		"eslint-config-next": "13.0.6",
+		"firebase": "^9.22.0",
 		"mobx": "^6.7.0",
 		"mobx-react": "^7.6.0",
 		"next": "^13.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.7.1",
-		"supertokens-auth-react": "^0.31.1",
-		"supertokens-web-js": "^0.5.0"
+		"react-icons": "^4.7.1"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
