--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
+		"start": "env-cmd -f .env react-scripts start",
+		"build": "env-cmd -f .env react-scripts build",
+		"test": "env-cmd -f .env react-scripts test",
+		"eject": "env-cmd -f .env react-scripts eject"
+	  },
 	"dependencies": {
 		"axios": "^1.3.4",
 		"eslint": "^8.29.0",
@@ -18,12 +18,14 @@
 		"next": "^13.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.7.1"
+		"react-icons": "^4.7.1",
+		"react-scripts": "5.0.1"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.19",
 		"tailwindcss": "^3.2.4",
-		"webpack": "^5.75.0"
+		"webpack": "^5.75.0",
+		"env-cmd": "^10.1.0"
 	}
 }
