--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"start": "env-cmd -f .env react-scripts start",
-		"build": "env-cmd -f .env react-scripts build",
-		"test": "env-cmd -f .env react-scripts test",
-		"eject": "env-cmd -f .env react-scripts eject"
+		"dev": "next dev",
+		"start": "env-cmd -f .env next start",
+		"build": "env-cmd -f .env next build"
 	  },
 	"dependencies": {
 		"axios": "^1.3.4",
