--- a/app/package.json
+++ b/app/package.json
@@ -17,8 +17,7 @@
 		"next": "^13.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.7.1",
-		"react-scripts": "5.0.1"
+		"react-icons": "^4.7.1"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
