--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"start": "env-cmd -f .env next start && env-cmd -f .env next export",
-		"build": "env-cmd -f .env next build"
+		"start": "env-cmd -f .env next start",
+		"build": "env-cmd -f .env next build && env-cmd -f .env next export"
 	  },
 	"dependencies": {
 		"axios": "^1.3.4",
