--- a/.github/workflows/app-staging-pull-request.yml
+++ b/.github/workflows/app-staging-pull-request.yml
@@ -32,3 +32,5 @@ jobs:
           channelId: live
           projectId: tumai-space-staging
           entryPoint: ./app
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
