--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "next dev",
 		"start": "env-cmd -f .env next start",
-		"build": "env-cmd -f .env next build"
+		"build": "env-cmd -f .env next build",
+		"export": "env-cmd -f .env next export"
 	  },
 	"dependencies": {
 		"axios": "^1.3.4",
