--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
 		"start": "env-cmd -f .env next start",
 		"build": "env-cmd -f .env next build",
 		"export": "env-cmd -f .env next export"
-	  },
+	},
 	"dependencies": {
 		"axios": "^1.3.4",
 		"eslint": "^8.29.0",
@@ -15,16 +15,16 @@
 		"firebase": "^9.22.0",
 		"mobx": "^6.7.0",
 		"mobx-react": "^7.6.0",
-		"next": "^13.2.3",
+		"next": "^13.4.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
+		"env-cmd": "^10.1.0",
 		"postcss": "^8.4.19",
 		"tailwindcss": "^3.2.4",
-		"webpack": "^5.75.0",
-		"env-cmd": "^10.1.0"
+		"webpack": "^5.75.0"
 	}
 }
