add department entry to DB

--- a/.gitignore
+++ b/.gitignore
@@ -509,3 +509,4 @@ sketch
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 
 # End of https://www.toptal.com/developers/gitignore/api/firebase,node,react,web,pycharm,webstorm
+api/playground.ipynb
