--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,11 +2,11 @@
 # python 3.10
 
 # linting
-black
-isort
-flake8
+ruff
 mypy
 typing_extensions
+types-python-dateutil
+types-pyyaml
 
 # testing
 httpx
@@ -29,5 +29,3 @@ psycopg2-binary
 sqlalchemy
 sqlalchemy-utils
 firebase-admin
-types-python-dateutil
-types-pyyaml
