--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.9'
 services:
-    # [BACKEND DB] ########################################################
+    # -------------------------------------------------------------------------------- #
+    #                                    BACKEND DB                                    #
+    # -------------------------------------------------------------------------------- #
     space-db:
         image: postgres:14-alpine
         restart: unless-stopped
@@ -17,7 +19,9 @@ services:
         networks:
             - backend-net
 
-    # [BACKEND API] #######################################################
+    # -------------------------------------------------------------------------------- #
+    #                                    BACKEND API                                   #
+    # -------------------------------------------------------------------------------- #
     tum-ai-space-api:
         image: tum-ai-space-api
         build: ./api
