--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.3.4",
+		"downloadjs": "^1.4.7",
 		"eslint": "^8.29.0",
 		"eslint-config-next": "13.0.6",
 		"firebase": "^9.22.0",
