Communication over docker works

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -24,6 +24,9 @@ AUTH:
         - 'http://192.168.178.21'
         - 'http://192.168.178.21:3000'
     USERS_DASHBOARD_API_KEY: 'someApiKey'
+CERTIFICATE:
+    CERTIFICATE_ALLOWED_ORIGINS:
+        - 'http://localhost:3009'
 #-------------------------------------------------------------------------------#
 LOGGER:
     LOGGER_NAME: 'tumai-space-global'
