--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
         volumes:
             - ./api/:/code
         ports:
-        - 8000:8000
+            - '8000:8000'
         depends_on:
             - space-db
         networks:
@@ -57,16 +57,15 @@ services:
         networks:
             - backend-net
     
-    space-tools-certification-api:
+    cert:
+        hostname: cert
         image: tum-ai-space-tools-certification-server
         build: ./tools/certification-api
         restart: unless-stopped
-        container_name: space-tools-certification-api
+        container_name: cert
         command: npm run dev
-        volumes:
-            - ./tools/certification/:/code
         ports:
-            - 3009:80
+            - '3009:80'
         networks:
             - backend-net
 
