--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,5 @@
 # Requirements for the FastAPI server and services
-# python 3.10
+# python 3.11
 
 # linting
 ruff
@@ -7,6 +7,7 @@ mypy
 typing_extensions
 types-python-dateutil
 types-pyyaml
+pyupgrade
 
 # testing
 httpx
