improve package structure and linting

--- a/api/Makefile
+++ b/api/Makefile
@@ -3,7 +3,7 @@
 PYTHONPATH=$(CURDIR)
 
 lint:
-	python -m ruff check .
+	python -m ruff check space_api tests
 	# MYPYPATH=${PYTHONPATH} PYTHONPATH=${PYTHONPATH} mypy --namespace-packages --explicit-package-bases .
 
 lint-fix:
