--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,8 +19,13 @@ requires-python = ">=3.11"
 repository = "https://github.com/Quantco/quantcore.mssqlkit"
 
 [tool.setuptools.packages.find]
-include = ["*"]
+include = ["api_space.*"]
 
+
+[tool.ruff]
+line-length = 88
+select = ["F", "E", "W", "I", "N", "UP"]
+target-version = "py311"
 
 [tool.mypy]
 check_untyped_defs = true
@@ -34,7 +39,7 @@ explicit_package_bases = true
 namespace_packages = true
 
 [tool.pytest.ini_options]
-addopts = "--import-mode=importlib --cov=quantcore.mssqlkit --cov-report term-missing"
+addopts = "--import-mode=importlib --cov=space_api --cov-report term-missing"
 
 [tool.coverage.run]
 omit = ["venv/*", "*__init__.py", "tests/*", "__pycache__"]
