--- a/.github/workflows/api-all-push-commit.yml
+++ b/.github/workflows/api-all-push-commit.yml
@@ -26,14 +26,13 @@ jobs:
         run: pip install -r api/requirements.txt
 
       - name: Lint with Ruff
-        run: cd ./api && python -m ruff check .
-        # TODO: integrate mypy
+        run: cd ./api && python -m ruff check . && pyupgrade `find space_api -name "*.py" -type f`
 
-      - name: write secret file
+      - name: Write secret file
         run: |
           mkdir -p /home/runner/work/space/space/api/.secrets          
           touch /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json 
           echo "${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}" > /home/runner/work/space/space/api/.secrets/tumai-space-firebase-adminsdk.json
 
       - name: Run pytest
-        run: PYTHONPATH=/home/runner/work/space/space/api pytest ./api
+        run: python -m pytest ./api/tests
