feat: Add certification (#84)
* Sync

* Communication works locally

* Add download of certificate

* Communication over docker works

* Rendering

* Cleanup & add authorization

* Linting

* Cleanup

* improve frontend code

* remove inputs

* Add department & position options

* Readd templates

* fix

* Linting

* Use old pre-commit

---------

Co-authored-by: MunzerDw <munzerdwedari@gmail.com>

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -20,9 +20,13 @@ AUTH:
         - 'https://space.staging.tum-ai.com'
         - 'http://localhost'
         - 'http://localhost:3000'
+        - 'http://localhost:3009'
         - 'http://192.168.178.21'
         - 'http://192.168.178.21:3000'
     USERS_DASHBOARD_API_KEY: 'someApiKey'
+CERTIFICATE:
+    CERTIFICATE_ALLOWED_ORIGINS:
+        - 'http://localhost:3009'
 #-------------------------------------------------------------------------------#
 LOGGER:
     LOGGER_NAME: 'tumai-space-global'
