--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
 		"build": "env-cmd -f .env next build"
 	},
 	"dependencies": {
+		"@radix-ui/react-tabs": "^1.0.4",
 		"axios": "^1.3.4",
 		"downloadjs": "^1.4.7",
 		"eslint": "^8.29.0",
