--- a/.github/workflows/app-all-push-commit.yml
+++ b/.github/workflows/app-all-push-commit.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo "REACT_APP_ENVIRONMENT=development" > .env
       - name: CI & Build
         working-directory: ./app
-        run: npm ci && npm run build
+        run: npm run build
       # - name: Run Tests
       #   working-directory: ./app
       #   run: npm test
