--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"lint": "eslint --ignore-path .esignorelint --ext .js,.jsx,.ts,.tsx .",
+		"preinstall": "npm run lint",
 		"start": "env-cmd -f .env next start",
 		"build": "env-cmd -f .env next build"
 	},
@@ -16,7 +18,7 @@
 		"firebase": "^9.22.0",
 		"mobx": "^6.7.0",
 		"mobx-react": "^7.6.0",
-		"next": "^13.4.4",
+		"next": "^13.4.10",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1"
