--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,8 +5,6 @@ WORKDIR /apps/space/api
 COPY --chown=$MAMBA_USER:$MAMBA_USER ./environment.yml environment.yml
 RUN micromamba install -y -n base -f environment.yml
 
-RUN mkdir .secrets && \
-    touch .secrets/tumai-space-firebase-adminsdk.json && \
-    echo ${FIREBASE_ADMINSDK_CERTIFICATE} > .secrets/tumai-space-firebase-adminsdk.json
+RUN mkdir .secrets
 
 COPY --chown=$MAMBA_USER:$MAMBA_USER . /apps/space/api
