--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -22,12 +22,13 @@ services:
     image: "tum-ai-space-api-${ENVIRON}"
     build: .
     restart: unless-stopped
-    command: gunicorn main:app -k uvicorn.workers.UvicornWorker --workers=4 --reload --bind=0.0.0.0
+    command: gunicorn space_api.main:app -k uvicorn.workers.UvicornWorker --workers=4 --reload --bind=0.0.0.0
     ports:
       - '8000:8000'
     networks:
       - backend-net
     environment:
+      - PYTHONPATH=${PYTHONPATH}
       - environment=${ENVIRON}
       - FIREBASE_ADMINSDK_CERTIFICATE=${FIREBASE_ADMINSDK_CERTIFICATE}
       # database environment
