--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -57,5 +57,5 @@ jobs:
       # TODO: shorten paths
 
       - name: Run pytest
-        run: python -m pytest api
+        run: python -m pytest tests
         working-directory: api
