--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -46,16 +46,14 @@ jobs:
       - name: Lint with Ruff
         run: python -m ruff check .
         working-directory: api
-
-      # TODO: integrate mypy
-      
+      - name: Run mypy
+        run: python -m mypy .
+        working-directory: api
       - name: write secret file
         run: |
           mkdir -p api/.secrets        
           touch api/.secrets/tumai-space-firebase-adminsdk.json 
           echo "${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}" > api/.secrets/tumai-space-firebase-adminsdk.json
-      # TODO: shorten paths
-
       - name: Run pytest
         run: python -m pytest tests
         working-directory: api
