--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,6 @@ fail_fast: false
 
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
     rev: v0.0.272
     hooks:
       - id: ruff
@@ -12,3 +11,12 @@ repos:
     hooks:
       - id: pyupgrade
         files: api/
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: '6e63c9e9c65e1df04465cdcda0f2490e89291f58'
+    hooks:
+    - id: mypy
+      files: api/
+      additional_dependencies:
+        - "types-PyYAML"
+        - "types-python-dateutil"
+        - "types-requests"
