--- a/.github/workflows/api-deploy-staging.yml
+++ b/.github/workflows/api-deploy-staging.yml
@@ -26,9 +26,12 @@ env:
   - MAIL_FROM_NAME=TUM.ai Space Team (STAGING)
 
 jobs:
-  build:
+  deploy-staging:
     name: Staging root-server deployment
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - uses: actions/checkout@v3
       - uses: mamba-org/setup-micromamba@5b9dc5cf9560f2808ade896803b2f68cfcfdd52b
@@ -36,25 +39,22 @@ jobs:
           environment-file: api/environment.yml
           init-shell: bash
       - name: Lint with Ruff
-        run: cd ./api && python -m ruff check .
-
-      # TODO: integrate mypy
-      
+        run: python -m ruff check .
+        working-directory: api
+      - name: Run mypy
+        run: python -m mypy .
+        working-directory: api
       - name: write secret file
         run: |
           mkdir -p api/.secrets        
           touch api/.secrets/tumai-space-firebase-adminsdk.json 
           echo "${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}" > api/.secrets/tumai-space-firebase-adminsdk.json
-      # TODO: shorten paths
-
       - name: Run pytest
-        run: python -m pytest .
+        run: python -m pytest tests
         working-directory: api
-
       - name: Setup SSH to deployment root-server
         uses: webfactory/ssh-agent@v0.5.2
         with:
           ssh-private-key: ${{ secrets.SSH_SERVER_GHA_PRIVATE_KEY }}
-  
       - name: force pull branch, and run Docker Compose
         run: ssh gha@91.210.224.56 'cd /apps/tumai/space-staging && git fetch --all && git reset --hard origin/main && docker-compose build --no-cache && docker-compose up -d --remove-orphans'
