add firebase certificate to ci

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -9,6 +9,9 @@ on:
     
   workflow_dispatch:
 
+env:
+  - FIREBASE_ADMINSDK_CERTIFICATE=${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}
+
 jobs:
   pre-commit:
     name: Pre-commit
