--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,22 @@
 fail_fast: false
 
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.0.272
     hooks:
-      - id: black
-        files: ^api/
-        language_version: python3
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+      - id: ruff
+        files: api/
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.9.0
     hooks:
-      - id: isort
+      - id: pyupgrade
+        files: api/
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: '6e63c9e9c65e1df04465cdcda0f2490e89291f58'
+    hooks:
+    - id: mypy
+      files: api/
+      additional_dependencies:
+        - "types-PyYAML"
+        - "types-python-dateutil"
+        - "types-requests"
