--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -7,10 +7,14 @@ on:
     branches:
       - main
     
+  push:
+    branches:
+      - main
+
   workflow_dispatch:
 
 env:
-  - FIREBASE_ADMINSDK_CERTIFICATE=${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}
+  FIREBASE_ADMINSDK_CERTIFICATE=${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}
 
 jobs:
   pre-commit:
