env variable specification fix

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 env:
-  FIREBASE_ADMINSDK_CERTIFICATE=${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}
+  FIREBASE_ADMINSDK_CERTIFICATE: ${{ secrets.FIREBASE_ADMINSDK_CERTIFICATE_STAGING }}
 
 jobs:
   pre-commit:
